fix: index.css, word wrap for <p> elements

--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,8 @@ button {
   background-color: #535bf2;
 }
 
+p {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
